# Encryption-with-dart-ffi

./: README.md  encryption.dart  pubspec.yaml
encryption_library/: CMakeLists.txt  encryption.c  encryption.def  encryption.h  test_encryption.c
test/: encryption_test.dart
